{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 504,
  "lineage": "9e338e28-b1c6-0db3-145d-7806531297c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kiratech_challenge_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0607a9783dd204cae",
            "arn": "arn:aws:ec2:eu-west-1:471112627015:instance/i-01a49f572d518731b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a49f572d518731b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kiratech_challenge_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c50bdae0d6e3b9dc",
            "private_dns": "ip-10-0-1-161.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-18-203-187-26.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.203.187.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f71333bcf1885a94",
                "volume_size": 14,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-054c89767976ed231",
              "sg-0c56c1d7c8f2100d7",
              "sg-0f340c351ba82dacb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5fd0f0f6d94e9d0",
            "tags": {
              "Name": "kiratech_challenge_control_plane"
            },
            "tags_all": {
              "Name": "kiratech_challenge_control_plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-054c89767976ed231",
              "sg-0c56c1d7c8f2100d7",
              "sg-0f340c351ba82dacb"
            ]
          },
          "dependencies": [
            "aws_key_pair.kiratech_challenge_key",
            "aws_security_group.kiratech_challenge_security_group_common",
            "aws_security_group.kiratech_challenge_security_group_control_plane",
            "aws_security_group.kiratech_challenge_security_group_flannel",
            "aws_subnet.kiratech_challenge_subnet",
            "aws_vpc.kiratech_challenge_vpc",
            "tls_private_key.kiratech_challenge_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kiratech_challenge_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0607a9783dd204cae",
            "arn": "arn:aws:ec2:eu-west-1:471112627015:instance/i-077ce56a4e4423d57",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077ce56a4e4423d57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiratech_challenge_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0de317804538e63bd",
            "private_dns": "ip-10-0-1-231.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-3-254-57-129.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.254.57.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4f45cdb6dc1868e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07a4a3fd7cbde78b0",
              "sg-0c56c1d7c8f2100d7",
              "sg-0f340c351ba82dacb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5fd0f0f6d94e9d0",
            "tags": {
              "Name": "kiratech_challenge Worker0",
              "Role": "Control Plane"
            },
            "tags_all": {
              "Name": "kiratech_challenge Worker0",
              "Role": "Control Plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a4a3fd7cbde78b0",
              "sg-0c56c1d7c8f2100d7",
              "sg-0f340c351ba82dacb"
            ]
          },
          "dependencies": [
            "aws_key_pair.kiratech_challenge_key",
            "aws_security_group.kiratech_challenge_security_group_common",
            "aws_security_group.kiratech_challenge_security_group_flannel",
            "aws_security_group.kiratech_challenge_security_group_worker_nodes",
            "aws_subnet.kiratech_challenge_subnet",
            "aws_vpc.kiratech_challenge_vpc",
            "tls_private_key.kiratech_challenge_private_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0607a9783dd204cae",
            "arn": "arn:aws:ec2:eu-west-1:471112627015:instance/i-052af9aa72f948d2e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052af9aa72f948d2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiratech_challenge_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f81c40e891384c0",
            "private_dns": "ip-10-0-1-72.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-52-50-130-220.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.130.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059ffddcf6e015319",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07a4a3fd7cbde78b0",
              "sg-0c56c1d7c8f2100d7",
              "sg-0f340c351ba82dacb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5fd0f0f6d94e9d0",
            "tags": {
              "Name": "kiratech_challenge Worker1",
              "Role": "Control Plane"
            },
            "tags_all": {
              "Name": "kiratech_challenge Worker1",
              "Role": "Control Plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a4a3fd7cbde78b0",
              "sg-0c56c1d7c8f2100d7",
              "sg-0f340c351ba82dacb"
            ]
          },
          "dependencies": [
            "aws_key_pair.kiratech_challenge_key",
            "aws_security_group.kiratech_challenge_security_group_common",
            "aws_security_group.kiratech_challenge_security_group_flannel",
            "aws_security_group.kiratech_challenge_security_group_worker_nodes",
            "aws_subnet.kiratech_challenge_subnet",
            "aws_vpc.kiratech_challenge_vpc",
            "tls_private_key.kiratech_challenge_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kiratech_challenge_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112627015:internet-gateway/igw-0e7e616ec8492b1d4",
            "id": "igw-0e7e616ec8492b1d4",
            "owner_id": "471112627015",
            "tags": {
              "Name": "kiratech_challenge_internet_gateway"
            },
            "tags_all": {
              "Name": "kiratech_challenge_internet_gateway"
            },
            "vpc_id": "vpc-049647c3bfcd2ae4d"
          },
          "dependencies": [
            "aws_vpc.kiratech_challenge_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kiratech_challenge_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112627015:route-table/rtb-0008160e346e851c3",
            "id": "rtb-0008160e346e851c3",
            "owner_id": "471112627015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7e616ec8492b1d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-049647c3bfcd2ae4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kiratech_challenge_internet_gateway",
            "aws_vpc.kiratech_challenge_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kiratech_challenge_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ebfcfc7b83a6e97",
            "route_table_id": "rtb-0008160e346e851c3",
            "subnet_id": "subnet-0b5fd0f0f6d94e9d0"
          },
          "dependencies": [
            "aws_internet_gateway.kiratech_challenge_internet_gateway",
            "aws_route_table.kiratech_challenge_route_table",
            "aws_subnet.kiratech_challenge_subnet",
            "aws_vpc.kiratech_challenge_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kiratech_challenge_security_group_common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112627015:security-group/sg-0f340c351ba82dacb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f340c351ba82dacb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kiratech_challenge_security_group_common",
            "name_prefix": "",
            "owner_id": "471112627015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiratech_challenge_security_group_common"
            },
            "tags_all": {
              "Name": "kiratech_challenge_security_group_common"
            },
            "timeouts": null,
            "vpc_id": "vpc-049647c3bfcd2ae4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kiratech_challenge_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kiratech_challenge_security_group_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112627015:security-group/sg-054c89767976ed231",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-054c89767976ed231",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Etcd server client API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kube-controller-manager",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kube-scheduler",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              }
            ],
            "name": "kiratech_challenge_security_group_control_plane",
            "name_prefix": "",
            "owner_id": "471112627015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiratech_challenge_security_group_control_plane"
            },
            "tags_all": {
              "Name": "kiratech_challenge_security_group_control_plane"
            },
            "timeouts": null,
            "vpc_id": "vpc-049647c3bfcd2ae4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kiratech_challenge_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kiratech_challenge_security_group_flannel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112627015:security-group/sg-0c56c1d7c8f2100d7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c56c1d7c8f2100d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "udp backend",
                "from_port": 8285,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8285
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "udp vxlan backend",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              }
            ],
            "name": "kiratech_challenge_security_group_flannel",
            "name_prefix": "",
            "owner_id": "471112627015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiratech_challenge_security_group_flannel"
            },
            "tags_all": {
              "Name": "kiratech_challenge_security_group_flannel"
            },
            "timeouts": null,
            "vpc_id": "vpc-049647c3bfcd2ae4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kiratech_challenge_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kiratech_challenge_security_group_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112627015:security-group/sg-07a4a3fd7cbde78b0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07a4a3fd7cbde78b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort Services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "kiratech_challenge_security_group_worker_nodes",
            "name_prefix": "",
            "owner_id": "471112627015",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049647c3bfcd2ae4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kiratech_challenge_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kiratech_challenge_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112627015:subnet/subnet-0b5fd0f0f6d94e9d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5fd0f0f6d94e9d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112627015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kiratech_challenge_subnet"
            },
            "tags_all": {
              "Name": "kiratech_challenge_subnet"
            },
            "vpc_id": "vpc-049647c3bfcd2ae4d"
          },
          "dependencies": [
            "aws_vpc.kiratech_challenge_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kiratech_challenge_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112627015:vpc/vpc-049647c3bfcd2ae4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d189c5217a117f8",
            "default_route_table_id": "rtb-0732eb6360844b290",
            "default_security_group_id": "sg-04d12684611d1488b",
            "dhcp_options_id": "dopt-08727dcca9bf68a9a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049647c3bfcd2ae4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0732eb6360844b290",
            "owner_id": "471112627015",
            "tags": {
              "Name": "kiratech_challenge_vpc"
            },
            "tags_all": {
              "Name": "kiratech_challenge_vpc"
            }
          }
        }
      ]
    }
  ]
}